# low_price_good_things

./: README.md
flight-price-monitor/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
flight-price-monitor/app/: cli.py  config.py  database.py  main.py  paths.py
flight-price-monitor/app/models/: __init__.py  alert.py  flight_price.py  monitor_task.py  provider_log.py
flight-price-monitor/app/providers/: air_china_provider.py  base.py  china_eastern_provider.py  china_southern_provider.py  ctrip_provider.py  fliggy_provider.py  meituan_provider.py
flight-price-monitor/app/scheduler/: jobs.py
flight-price-monitor/app/services/: alert_service.py  ctrip_auth_service.py  date_service.py  monitor_service.py  provider_service.py  time_service.py
flight-price-monitor/app/templates/: base.html  dashboard.html  history.html  provider_logs.html  results.html  settings.html  task_form.html  tasks.html
flight-price-monitor/scripts/: init_db.py  install_playwright.py  save_ctrip_storage_state.py
