[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-price-monitor"
version = "0.1.0"
description = "FastAPI flight price monitor"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.42,<1",
    "jinja2>=3.1,<4",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "python-dotenv>=1.1,<2",
    "apscheduler>=3.11,<4",
    "playwright>=1.55,<2",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.20,<1",
]

[project.scripts]
flight-price-monitor = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/**/*"]
